changed config for styles and added tokens

--- a/client/config.scss
+++ b/client/config.scss
@@ -1,7 +1,5 @@
 
-// All global variables and styles go into this file. 
-
-
+// All global va=riables and styles go into this file. 
 // =================================================================
 // COLORS
 // =================================================================
@@ -15,7 +13,12 @@ $yellow: #fbd94b;
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 $font1: "Roboto";
 
+
 body {
 	margin: 0;
 	font-family: $font1;
+
 }
+
+
+
