--- a/client/styles/main/layouts/header.scss
+++ b/client/styles/main/layouts/header.scss
@@ -11,7 +11,7 @@ $header-height: $header-inner-height + 2*$header-padding;
 	box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.3);
 	position: relative;
 }
-.navItem {
+.nav-item {
 	display: inline-block;
 	margin-left: 5px;
 	margin-right: 5px;
@@ -23,7 +23,7 @@ $header-height: $header-inner-height + 2*$header-padding;
 	}
 }
 
-.ctaContainer {
+.cta-container {
 	display: inline-block;
 	margin-left: 30px;
 	margin-right: 15px;
