--- a/client/styles/main/layouts/header.scss
+++ b/client/styles/main/layouts/header.scss
@@ -1,71 +1,53 @@
-$header-inner-height: 36px;
-$header-padding: 15px;
-$header-height: $header-inner-height + 2*$header-padding;
+$header-height: 80px;
 
-.nav {
-	display: block;
-	background: white;
-	height: $header-inner-height;
-	padding: $header-padding;
-	text-align: right;
-	box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.3);
+header#main-header {
 	position: relative;
-}
-.nav-item {
-	display: inline-block;
-	margin-left: 5px;
-	margin-right: 5px;
+	height: $header-height;
+	box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.3);
 
-	a {
-		padding-left: 25px;
-		padding-right: 25px;
-		font-size: 14px;
+	#logo {
+		top: 10px;
+		left: 15px;
+		display: inline-block;
+		position: absolute;
+		width: 60px;
+		height: 60px;
+		background: url('/assets/images/placeholder.png');
+		background-repeat: no-repeat;
+		background-size: contain;
+		z-index: 10;
 	}
-}
 
-.cta-container {
-	display: inline-block;
-	margin-left: 30px;
-	margin-right: 15px;
+	#primary-nav {
+		display: flex;
+		height: $header-height;
+		position: relative;
+		align-items: center;
+		justify-content: flex-end;
+	}
 
-	.cta {
-		text-decoration: none;
-		display: block;
-		color: white;
-		text-align: center;
-		transition: 0.2s background ease-in;
-		padding-right: 20px;
-		padding-left: 20px;
-		font-size: 14px;
+	.nav-item {
+		display: inline-block;
+		margin-left: 15px;
+		margin-right: 15px;
 
-		i, svg {
-			font-size: 20px;
-			padding-right: 6px;
-			transform: translateY(-2px);
-			display: inline-flex;
-			vertical-align: middle;
+		a {
+			padding-left: 25px;
+			padding-right: 25px;
+			font-size: 14px;
 		}
 	}
 
-	.cta:hover {
-		background: $red;
+	a.cta {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		text-decoration: none;
+		color: white;
+
+		svg {
+			margin-left: 8px;
+			margin-right: 8px;
+		}
 	}
-}
-
-.logo {
-	top: 5px;
-	left: 15px;
-	display: inline-block;
-	position: absolute;
-	width: $header-height - 10px;
-	height: $header-height - 10px;
-	background: url('/assets/images/placeholder.png');
-	background-repeat: no-repeat;
-	background-size: contain;
-}
-
-.link {
-	color: $black;
-	text-decoration: none;
-	text-align: center;
 }
