--- a/client/styles/variables.scss
+++ b/client/styles/variables.scss
@@ -14,9 +14,25 @@ NOTE: Don't put non-variables in this file or they will be loaded multiple times
 // COLORS
 // =================================================================
 $black: rgb(40, 40, 40);
-$red: #f93939;
-$yellow: #fbd94b;
 
 $font1: 'Roboto';
 
+$red: #fd6464;
+$lightgrey: rgb(210, 210, 210);
+$grey: rgb(145, 145, 145);
+
+$blue1: rgb(113, 142, 164);
+$blue2: rgb(73, 109, 137);
+$blue3: rgb(41, 79, 109);
+$blue4: rgb(18, 54, 82);
+$blue5: rgb(4, 32, 55);
+
+$yellow1: rgb(255, 234, 170);
+$yellow2: rgb(212, 186, 106);
+$yellow3: rgb(170, 142, 57);
+$yellow4: rgb(128, 101, 21);
+$yellow5: rgb(85, 64, 0);
+
+$orange2: rgb(212, 136, 106);
+$orange3: rgb(170, 89, 57);
 
